更新 CosyVoice2 引用

--- a/Models/SpeechLM/ST2S/2024.12.13_CosyVoice2.md
+++ b/Models/SpeechLM/ST2S/2024.12.13_CosyVoice2.md
@@ -30,7 +30,7 @@
   - [Github](https://github.com/funaudiollm/cosyvoice)
   - [Demo](https://funaudiollm.github.io/cosyvoice2)
 - 文件:
-  - [ArXiv](_PDF/2412.10117v3__CosyVoice2__Scalable_Streaming_Speech_Synthesis_with_Large_Language_Models.pdf)
+  - [ArXiv](../_PDF/2412.10117v3__CosyVoice2__Scalable_Streaming_Speech_Synthesis_with_Large_Language_Models.pdf)
   - [Publication] #TODO
 
 </details>
@@ -69,33 +69,33 @@ We invite readers to listen to the demos at [this https URL](https://funaudiollm
 
 <table><tr><td width="50%">
 
-In recent years, neural text-to-speech (TTS) synthesis models have garnered significant attention for surpassing traditional concatenative and statistical parametric methods ([Tacotron [1]]; [Tacotron2 [2]]; [DeepVoice3 [3]]; [Clarinet [4]](../E2E/2018.07.19_ClariNet.md); [FastSpeech [5]]; [Transformer-TTS [6]]; [FastSpeech2 [7]]).
+In recent years, neural text-to-speech (TTS) synthesis models have garnered significant attention for surpassing traditional concatenative and statistical parametric methods (**Tacotron**[^01], **Tacotron2**[^02], **DeepVoice3**[^03], **ClariNet**[^04], **FastSpeech**[^05], **Transformer-TTS**[^06], **FastSpeech2**[^07]).
 These models have achieved high fidelity and naturalness on pre-defined specific speakers.
-Recent studies show that zero-shot TTS models are able to synthesize speech for any speaker by imitating the timbre, prosody and style of a reference speech ([VALL-E [8]](ST2S/2023.01.05_VALL-E.md)).
+Recent studies show that zero-shot TTS models are able to synthesize speech for any speaker by imitating the timbre, prosody and style of a reference speech (**VALL-E**[^08]).
 Beyond their in-context learning (ICL) capability, zero-shot TTS models benefit from large-scale training data, achieving synthesis quality and naturalness nearly indistinguishable from human speech.
 
 Recent zero-shot TTS models can be broadly divided into three categories: codec language models, feature diffusion models and their hybrid systems.
-Codec language models utilize a speech codec model to extract discrete speech representation ([SoundStream [9]](../SpeechCodec/2021.07.07_SoundStream.md); [EnCodec [10]](../SpeechCodec/2022.10.24_EnCodec.md); [FunCodec [11]](../SpeechCodec/2023.09.14_FunCodec.md)) and employ an autoregressive ([VALL-E [8]](ST2S/2023.01.05_VALL-E.md); [SPEAR-TTS [12]](ST2S/2023.02.07_SPEAR-TTS.md); [ELLA-V [13]](ST2S/2024.01.14_ELLA-V.md); [VALL-T [14]](ST2S/2024.01.25_VALL-T.md); [RALL-E [15]](ST2S/2024.04.04_RALL-E.md); [VALL-E 2 [16]](ST2S/2024.06.08_VALL-E_2.md); [VALL-E R [17]](ST2S/2024.06.12_VALL-E_R.md)) or masked ([MaskGCT [18]](ST2S/2024.09.01_MaskGCT.md)) language model to predict the speech tokens, which are then synthesized to waveforms via codec vocoders ([WaveNeXt [19]](../Vocoder/2023.12.16_WaveNeXt.md); [Vocos [20]](../Vocoder/2023.03.01_Vocos.md)).
-Continuous speech representations are also explored in [MELLE [21]](ST2S/2024.07.11_MELLE.md).
+Codec language models utilize a speech codec model to extract discrete speech representation (**SoundStream**[^09], **EnCodec**[^10], **FunCodec**[^11]) and employ an autoregressive (**VALL-E**[^08], **SPEAR-TTS**[^12], **ELLA-V**[^13], **VALL-T**[^14], **RALL-E**[^15], **VALL-E2**[^16], **VALL-E R**[^17]) or masked (**MaskGCT**[^18]) language model to predict the speech tokens, which are then synthesized to waveforms via codec vocoders (**WaveNeXt**[^19], **Vocos**[^20]).
+Continuous speech representations are also explored in **MELLE**[^21].
 Language model-based TTS can generate varied and prosody-consistent speech via autoregressive sampling.
 
-Inspired by advances in image generation, denoising diffusion ([DDPM [22]](../Diffusion/2020.06.19_DDPM.md); [Song et al. [23]](../Diffusion/2020.11.26_Score-Based_Generative_Modeling_through_SDE.md)) and [flow matching models [24]](../Diffusion/2022.10.06_Flow_Matching.md) have been introduced into non-autoregressive (NAR) speech synthesis.
-Early diffusion-based TTS models required duration prediction for each text (phone) to address the length disparity between text and speech features ([Voicebox [25]](2023.06.23_VoiceBox.md); [NaturalSpeech3 [26]](../Diffusion/2024.03.05_NaturalSpeech3.md); [VoiceFlow [27]](../Diffusion/2023.09.10_VoiceFlow.md); [Matcha-TTS [28]](../Diffusion/2023.09.06_Matcha-TTS.md)).
+Inspired by advances in image generation, denoising diffusion (**DDPM**[^22], **Song et al.**[^23]) and **Flow Matching** models[^24] have been introduced into non-autoregressive (NAR) speech synthesis.
+Early diffusion-based TTS models required duration prediction for each text (phone) to address the length disparity between text and speech features (**VoiceBox**[^25], **NaturalSpeech3**[^26], **VoiceFlow**[^27], **Matcha-TTS**[^28]).
 However, this rigid alignment can affect naturalness, resulting in flat prosody.
-To mitigate this issue, cross-attention and Diffusion Transformers (DiT) have been introduced into NAR TTS models ([E3- TS [29]](../Diffusion/2023.11.02_E3_TTS.md); [Ditto-TTS [30]](../Diffusion/2024.06.17_DiTTo-TTS.md)).
-Recent research indicates simpler approaches for text-speech alignment in NAR TTS models, such as [E2 TTS [31]](../Diffusion/2024.06.26_E2_TTS.md), [F5-TTS [32]](../Diffusion/2024.10.09_F5-TTS.md) and [Seed-TTS [33]](2024.06.04_Seed-TTS.md).
+To mitigate this issue, cross-attention and Diffusion Transformers (DiT) have been introduced into NAR TTS models (**E3-TTS**[^29], **DiTTo-TTS**[^30]).
+Recent research indicates simpler approaches for text-speech alignment in NAR TTS models, such as **E2 TTS**[^31], **F5-TTS**[^32] and **Seed-TTS**[^33].
 In these models, input text is padded with special tokens to match the total speech length which is either automatically predicted by the utterance duration prediction module or specified by the user in advance.
 Since NAR TTS models are not constrained by codec vocoders, they can achieve superior speech quality.
 
-Hybrid systems combine the text-to-codec language model and codec-to-feature diffusion model ([Seed-TTS [33]](2024.06.04_Seed-TTS.md); [CosyVoice [34]](ST2S/2024.07.07_CosyVoice.md); [FireRedTTS [35]](2024.09.05_FireRedTTS.md)).
+Hybrid systems combine the text-to-codec language model and codec-to-feature diffusion model (**Seed-TTS**[^33], **CosyVoice**[^34], **FireRedTTS**[^35]).
 The language model addresses the alignment between text and speech as well as the utterance duration prediction, while the codec-to-feature diffusion model synthesizes speech features (Mel spectrum) based on the generated codec and other conditions.
 By leveraging the strengths of both generative models, hybrid systems achieve high diversity, prosody consistency and speech quality.
 
 Despite the success of recent zero-shot TTS models, they generally operate in non-streaming (offline) mode, which involves complete input text and requires synthesizing the entire utterance before returning the waveform.
-This results in high latency, negatively impacting user experience in applications like voice chat ([GPT-4o [36]](../SpokenDialogue/2024.09.06_GPT-4o.md); [SpeechGPT [37]](../SpokenDialogue/2023.05.18_SpeechGPT.md)).
-To address this issue, streaming synthesis has been explored for language model-based zero-shot TTS models ([LiveSpeech [38]](2024.06.05_LiveSpeech.md); [LiveSpeech2 [39]](2024.10.01_LiveSpeech2.md); [BASE TTS [40]](ST2S/2024.02.12_BASE-TTS.md); [LLM2Speech [41]](2023.09.20_LLM2Speech.md)), but diffusion-based TTS models and hybrid systems lack well-established streaming solutions.
+This results in high latency, negatively impacting user experience in applications like voice chat (**GPT-4o**[^36], **SpeechGPT**[^37]).
+To address this issue, streaming synthesis has been explored for language model-based zero-shot TTS models (**LiveSpeech**[^38], **LiveSpeech2**[^39], **BASE-TTS**[^40], **LLM2Speech**[^41]), but diffusion-based TTS models and hybrid systems lack well-established streaming solutions.
 
-Building on the success of [CosyVoice [34]](ST2S/2024.07.07_CosyVoice.md), we introduce ***CosyVoice2***, a streaming zero-shot TTS model with improved prosody naturalness, content consistency, and speaker similarity.
+Building on the success of **CosyVoice**[^34], we introduce ***CosyVoice2***, a streaming zero-shot TTS model with improved prosody naturalness, content consistency, and speaker similarity.
 Our contributions include:
 
 - Unifying streaming and non-streaming synthesis in a single framework and proposing the unified text-speech language model and chunk-aware causal flow matching model, leading to lossless streaming synthesis compared to offline mode.
@@ -119,7 +119,7 @@ In addition, the chunk-aware flow matching design can also be applied to NAR TTS
 
 <table><tr><td width="50%">
 
-***CosyVoice2*** builds on the similar design philosophy of its predecessor ([CosyVoice [34]](ST2S/2024.07.07_CosyVoice.md)) by separating the semantic and acoustic information of speech signals and modeling them independently.
+***CosyVoice2*** builds on the similar design philosophy of its predecessor (**CosyVoice**[^34]) by separating the semantic and acoustic information of speech signals and modeling them independently.
 The speech generation process is redefined as a gradual semantic decoding procedure, where conditional information is progressively incorporated.
 Specifically, the text-speech language model (LM) focuses solely on semantic information, decoding high-level text tokens into supervised semantic speech tokens.
 In the Flow Matching model, acoustic details, such as timbre, are introduced through speaker embeddings and reference speech, converting speech tokens into the Mel spectrum for a given speaker.
@@ -151,9 +151,10 @@ Other languages, such as English, Japanese, and Korean, are not subject to speci
 
 <table><tr><td width="50%">
 
-As shown in Figure \ref{fig:overall} (a), we insert the [finite scalar quantization (FSQ) module [42]](../../Modules/VQ/FSQ.md)  into the encoder of SenseVoice-Large ASR model ([FunAudioLLM [43]](2024.07.04_FunAudioLLM.md)).
-At the training stage, the input speech $X$ goes through the $\text{Encoder}_1$ to obtain the intermediate representations, where $\text{Encoder}_1$ consists of six Transformer blocks with the [rotary positional embedding [44]](../../Modules/PositionEmb/RoPE.md).
-Then, the intermediate representations are fed into the FSQ module for quantization, and the quantized representations are passed through the rest of SenseVoice-Large modules, including $\text{Encoder}_2$ and $\text{ASR\ Decoder}$, to predict the posterior probabilities of corresponding text tokens.
+As shown in Figure \ref{fig:overall} (a), we insert the **Finite Scalar Quantization (FSQ)** module[^42] into the encoder of SenseVoice-Large ASR model (**FunAudioLLM**[^43]).
+At the training stage, the input speech $X$ goes through the $\mathrm{Encoder}_1$ to obtain the intermediate representations, where $\mathrm{Encoder}_1$ consists of six Transformer blocks with the **Rotary Positional Embedding**[^44].
+Then, the intermediate representations are fed into the FSQ module for quantization, and the quantized representations are passed through the rest of SenseVoice-Large modules, including $\mathrm{Encoder}_2$ and $\mathrm{ASR\ Decoder}$, to predict the posterior probabilities of corresponding text tokens.
+
 
 In the FSQ module, the intermediate representations $H$ are firstly projected into a $D$-dimensional low-rank space, and the values of each dimension are quantized into $[-K,K]$ with the bounded round operation $\text{ROUND}$.
 Then, the quantized low-rank representations $\bar{H}$ are projected into the original dimension $\tilde{H}$ for the following modules:
@@ -183,42 +184,42 @@ Our speech tokenizer works at a token rate of 25 Hz, i.e., 25 speech tokens per 
 
 <table><tr><td width="50%">
 
-In ***CosyVoice2***, the pre-trained textual LLM, [Qwen2.5-0.5B [45]](../TextLM/2024.12.19_Qwen2.5.md), is used as the text-speech language model to generate the speech tokens autoregressively with the input text as a prompt.
+In ***CosyVoice2***, the pre-trained textual LLM, **Qwen2.5-0.5B**[^45], is used as the text-speech language model to generate the speech tokens autoregressively with the input text as a prompt.
 Similar to other LMs, the text-speech LM is also trained in a next-token-prediction scheme as shown in Figure \ref{fig:overall} (b).
 Different from the previous CosyVoice, we remove the speaker embedding to avoid information leaking.
 More importantly, we find that such utterance-level vector contains not only speaker identify but also language and paralanguage information, which harms the prosody naturalness and cross-lingual capability of the text-speech LM.
 Besides, we also abandon the text encoder of the previous CosyVoice, since we find that the Qwen2.5-0.5B model is powerful enough to align the text and speech tokens, and the text encoder is no longer needed.
 
 Benefiting from the simplicity of text-speech LM, we can build a unified model for both streaming and non-streaming synthesis.
-Here, `streaming mode` means the input text is received in a continuous flow rather than being known as a complete sentence in advance.
+Here, "streaming mode" means the input text is received in a continuous flow rather than being known as a complete sentence in advance.
 In ***CosyVoice2***, the difference between streaming and non-streaming modes is only the way of sequence construction for LM:
 
-- For the **Non-Streaming** mode, the `start of sequence` `\circled{S}`, all text tokens, `turn of speech` token `\circled{T}`, all speech tokens and the `end of sequence` `\circled{E}` are concatenated sequentially as shown in the bottom of Figure \ref{fig:ULM}.
+- For the **Non-Streaming** mode, the `start of sequence` $(S)$, all text tokens, `turn of speech` token $(T)$, all speech tokens and the `end of sequence` $(E)$ are concatenated sequentially as shown in the bottom of Figure \ref{fig:ULM}.
 Ignore token means that their losses are ignored while minimizing the cross-entropy objective function.
 - For the **Streaming** mode, we mix up the text and speech tokens in a pre-defined ratio of $N$:$M$, i.e., every $N$ text tokens are followed by $M$ speech tokens seen in the top of Figure \ref{fig:ULM}.
 If the next token is a text token, the model is expected to predict a filling token (rather than the text token), which indicates that the next $N$ text tokens should be concatenated at the inference stage.
-Once the text tokens are ran out of, the `turn of speech` token `\circled{T}` and the remaining speech tokens are concatenated sequentially, forming the hybrid text-speech token sequence in the streaming mode.
+Once the text tokens are ran out of, the `turn of speech` token $(T)$ and the remaining speech tokens are concatenated sequentially, forming the hybrid text-speech token sequence in the streaming mode.
 In our experiments, $N$ and $M$ are set to 5 and 15, respectively.
 
 By training the text-speech LM on the above two sequences simultaneously, we can perform streaming and non-streaming speech generation within a single unified model.
 In real-life scenarios, such as speaker fine-tuning (SFT) and in-context learning (ICL), the inference sequence differs as follows:
 
 - **ICL, Non-Streaming**: In ICL, the LM requires prompt text and speech tokens from the reference audio to imitate the accent, prosody, emotion and style.
-In the non-streaming mode, the prompt and to-synthesize text tokens are concatenated as the whole entity, and the prompt speech tokens are treated as the pre-generated results and are fixed: `\circled{S}, prompt\_text, text, \circled{T}, prompt\_speech`.
-The autoregressive generation of LM is started from such sequence until the `End of sequence` token `\circled{E}` is detected.
+In the non-streaming mode, the prompt and to-synthesize text tokens are concatenated as the whole entity, and the prompt speech tokens are treated as the pre-generated results and are fixed: `(S), prompt\_text, text, (T), prompt\_speech`.
+The autoregressive generation of LM is started from such sequence until the `End of sequence` token $(E)$ is detected.
 - **ICL, Streaming**: In this scenario, we assume the to-generate text is already known and the speech tokens should be generated in a streaming manner.
 Similarly, we treat the prompt and to-generate text as a whole entity.
-Then, we mix it up with the prompt speech tokens on the ratio of $N$:$M$: `\circled{S}, mixed\_text\_speech, \circled{T}, remaining\_speech`.
+Then, we mix it up with the prompt speech tokens on the ratio of $N$:$M$: `(S), mixed\_text\_speech, (T), remaining\_speech`.
 If the length of text is greater than that of prompt speech tokens, the LM will generate `filling token`.
 In this situation, we manually pad $N$ text tokens.
-If the text tokens run out of, the `Turn of speech` token `\circled{T}` will be added.
-In the streaming mode, we return generation results every $M$ tokens until the `\circled{E}` is detected.
+If the text tokens run out of, the `Turn of speech` token $(T)$ will be added.
+In the streaming mode, we return generation results every $M$ tokens until the $(E)$ is detected.
 - **SFT, Non-Streaming**: In the SFT scenario, the LM is fine-tuned on a specific speaker, and the prompt text and speech are no longer needed.
-Thus, the initial sequence is very simple: `\circled{S}, text, \circled{T}`.
-Starting from this, the text-speech LM can generate speech tokens autoregressively until `\circled{T}`.
-- **SFT, Streaming**: In the streaming mode of SFT, we start the speech generation from the following sequence: `\circled{S}, first\_N\_text`.
+Thus, the initial sequence is very simple: `(S), text, (T)`.
+Starting from this, the text-speech LM can generate speech tokens autoregressively until $(T)$.
+- **SFT, Streaming**: In the streaming mode of SFT, we start the speech generation from the following sequence: `(S), first\_N\_text`.
 Then, the LM will generate $M$ speech tokens, and we manually pad the next $N$ text tokens.
-We repeat the above process until all text tokens run out of, and then `\circled{T}` is added.
+We repeat the above process until all text tokens run out of, and then $(T)$ is added.
 Note that this mode can also be adopted by the speech-to-speech multi-modal large language models to obtain an extremely low latency.
 
 </td><td>
@@ -273,7 +274,7 @@ $$
 t:=1-\cos\left(\frac{1}{2}t\pi\right)
 $$
 
-Besides, we also train the model on both conditional and non-conditional situations to enable the classifier-free guidance (CFG) ([CFG [46]](../Diffusion/2022.07.26_Classifier-Free_Guidance.md); [iDDPM [47]](../Diffusion/2021.02.18_iDDPM.md); [Voicebox [48]](2023.06.23_VoiceBox.md)) at the inference stage:
+Besides, we also train the model on both conditional and non-conditional situations to enable the classifier-free guidance (CFG) (**CFG**[^46], **iDDPM**[^47], **VoiceBox**[^25]) at the inference stage:
 
 $$
 \begin{aligned}
@@ -308,7 +309,7 @@ Another advantage of this chunk-aware training is that the masks with more conte
 
 <table><tr><td width="50%">
 
-The first-package latency is an important metric for streaming synthesis models, which significantly affects the user experience especially in LLM-based voice chat applications, such as [GPT-4o [36]](../SpokenDialogue/2024.09.06_GPT-4o.md).
+The first-package latency is an important metric for streaming synthesis models, which significantly affects the user experience especially in LLM-based voice chat applications, such as **GPT-4o**[^36].
 In the context of TTS, the to-synthesize text is known in advance, and the latency comes from the aspects of speech token generation, Mel spectrogram reconstruction and waveform synthesis.
 Thus, the first-package latency $L_{TTS}$ of ***CosyVoice2*** can be obtained as follows:
 
@@ -367,7 +368,7 @@ The learning rate is set to 1e-5 during the whole multi-speaker fine-tuning proc
 
 Reinforcement learning is a commonly used method in the training of large language models, which can make the LM output align with human preference.
 In ***CosyVoice2***, we employ speaker similarity (SS) and recognition word error rate (WER) from the ASR system as the reward function to improve speaker similarity and pronunciation accuracy in the fine-tuning stage.
-We use WER and SS to distinguish preferred sample $x^w$ and rejected samples $x^l$ and optimize the TTS system with [direct preference optimization (DPO) [49]](../../Modules/RLHF/2023.05.29_DPO.md) as follow:
+We use WER and SS to distinguish preferred sample $x^w$ and rejected samples $x^l$ and optimize the TTS system with **Direct Preference Optimization (DPO)**[^49] as follow:
 
 $$
 L_{DPO}(\pi_\theta; \pi_{\text{ref}}) = -\log \sigma(\beta \log \frac{\pi_\theta(\mu^w | y)}{\pi_{\text{ref}}(\mu^w | y)} - \beta \log \frac{\pi_\theta(\mu^l | y)}{\pi_{\text{ref}}(\mu^l | y)})
@@ -419,9 +420,10 @@ It can be also used for speech synthesis in languages such as Japanese and Korea
 
 <table><tr><td width="50%">
 
-***CosyVoice2*** shares the same training data as its previous version ([CosyVoice [34]](ST2S/2024.07.07_CosyVoice.md)).
+***CosyVoice2*** shares the same training data as its previous version (**CosyVoice**[^34]).
+
 We first collect the speech-only data with internal speech processing tools.
-Subsequently, the [Paraformer [50]](../ASR/2022.06.16_Paraformer.md)  and SenseVoice ([FunAudioLLM [43]](2024.07.04_FunAudioLLM.md)) are employed to generate pseudo text labels for Chinese and other languages, respectively.
+Subsequently, the **Paraformer**[^50] and **SenseVoice**[^43] are employed to generate pseudo text labels for Chinese and other languages, respectively.
 We also employ an internal force-alignment model to filter out low-quality data and enhances the accuracy of punctuation.
 Data details are provided in Table \ref{tab:cv_data}.
 
@@ -434,13 +436,13 @@ Data details are provided in Table \ref{tab:cv_data}.
 <table><tr><td width="50%">
 
 We evaluate our ***CosyVoice2*** on two test sets.
-The first one is constructed from the test-clean set of Librispeech corpus ([UniCATS [51]](../Diffusion/2023.06.13_UniCATS.md)), denoted as test-clean.
+The first one is constructed from the test-clean set of **Librispeech corpus**[^51], denoted as `test-clean`.
 This test set is used to evaluate ***CosyVoice2*** on a limited English domain.
-The **Whisper-Large V3** is used as the ASR model to evaluate the content consistency.
-As for the speaker similarity (SS), we employ the [ERes2Net model [52]](../_Basis/2023.05.22_ERes2Net.md) to extract speaker embeddings of prompt and generated utterances, and their raw cosine similarity is treated as the speaker similarity.
-NMOS score ([DNSMOS P.385 [53]](../../Evaluations/2021.10.05_DNSMOS_P.385.md)) is used to evaluate the objective quality.
+The Whisper-large V3 is used as the ASR model to evaluate the content consistency.
+As for the speaker similarity (SS), we employ the **ERes2Net** model[^52] to extract speaker embeddings of prompt and generated utterances, and their raw cosine similarity is treated as the speaker similarity.
+NMOS score[^53] is used to evaluate the objective quality.
 
-The second evaluation is conducted on the SEED test sets ([Seed-TTS [33]](2024.06.04_Seed-TTS.md)), which is widely used to evaluate recent TTS models, covering various text domains and reference speeches.
+The second evaluation is conducted on the SEED test sets (**Seed-TTS**[^33]), which is widely used to evaluate recent TTS models, covering various text domains and reference speeches.
 In this evaluation, about 2,000 Chinese and 1,000 English samples are selected from CommonVoice datasets, denoted as test-zh and test-en, respectively.
 In addition, about 400 hard test cases are also included to evaluate the robustness of TTS models on text repetition, tongue twister and other challenging synthesis cases, denoted as test-hard in this report.
 The Paraformer is employed to recognize the synthesis results of test-zh and test-hard, while the **Whisper-Large V3** is adopted for test-en to evaluate the content consistency.
@@ -458,7 +460,7 @@ We prepare two test sets, denoted as test-ja and test-ko, for the evaluation on 
 The test-ja consists 1,000 samples extracted from the CommonVoice dataset, which are used to measure the model’s performance on various metrics, such as WER, SS, MOS.
 Specifically, we randomly shuffle and pair the entire CommonVoice JA-test set as reference utterance and target utterance spoken.
 Considering the wide range of utterances' text lengths of JA-test set, we randomly selected 1,000 pairs of reference-target utterances from the length range from 8 to 32 characters as our final test set.
-For the test-ko, we selected 1,000 speech samples with a WER of less than 5\% and no deletion or insertion errors, utilizing the **Whisper-Large V3** [54] as the ASR model.
+For the test-ko, we selected 1,000 speech samples with a WER of less than 5\% and no deletion or insertion errors, utilizing the **Whisper-Large V3**[^54] as the ASR model.
 These samples were used as reference utterances for the Korean speech synthesis.
 For the input text, we randomly selected 1,000 text samples from the remaining data.
 We have released the lists of prompt speeches, prompt transcriptions and input text from these two test sets are released to facilitate result reproduction.
@@ -491,8 +493,8 @@ We selected 100 speech samples from each of the three speakers in the VoxCeleb1 
 As illustrated in Figures~\ref{fsqvis}(a) and (b), it is evident that before the quantization, Encoder$_1$'s outputs exhibit different distributions among different speakers.
 In contrast, the distributions of quantized representations are nearly indistinguishable.
 In addition, Figure~\ref{fsqvis}(c) also shows that the tokenizer fully utilizes the codebook.
-Subsequently, the [S3prl toolkit [55]](../../Evaluations/2024.04.15_SUPERB.md) is employed to further evaluate the speaker entanglement by performing speaker identification (SID) task.
-We use Sensevoice-large encoder with FSQ as an upstream feature extractor and train SID task with representations before or after the quantization.
+Subsequently, the **S3prl toolkit**[^55] is employed to further evaluate the speaker entanglement by performing speaker identification (SID) task.
+We use **SenseVoice-Large** encoder with FSQ as an upstream feature extractor and train SID task with representations before or after the quantization.
 Figure~\ref{fsqtrain} shows the accuracy curves during the training.
 The SID layer with quantized tokens does not converge, which proves the decoupling function of the tokenizer on speaker information.
 
@@ -504,7 +506,7 @@ The SID layer with quantized tokens does not converge, which proves the decoupli
 
 <table><tr><td width="50%">
 
-We first evaluated our ***CosyVoice2*** models on a limited English text domain and compared it with several open-source models, such as [ChatTTS [Github] [56]](https://github.com/2noise/ChatTTS), [GPT-SoVITS [Github] [57]](https://github.com/RVC-Boss/GPT-SoVITS), [OpenVoice [58]](../E2E/2023.12.03_OpenVoice.md), [ParlerTTS [59]](2024.02.02_Parler-TTS.md), [EmotiVoice [Github] [60]](https://github.com/netease-youdao/EmotiVoice), and its predecessor [CosyVoice [34]](ST2S/2024.07.07_CosyVoice.md).
+We first evaluated our ***CosyVoice2*** models on a limited English text domain and compared it with several open-source models, such as **ChatTTS**[^56], **GPT-SoVITS**[^57], **OpenVoice**[^58], **ParlerTTS**[^59], **EmotiVoice**[^60], and its predecessor **CosyVoice**[^34].
 The objective results are presented in Table \ref{tab:res-librispeech}, including content consistency (WER), speech quality (NMOS) and speaker similarity (SS).
 From the table, we can see that ***CosyVoice2***  achieves state-of-the-art performance on the Librispeech test-clean set, surpassing all baseline models acros all evaluation metrics.
 Notably, ***CosyVoice2*** even demonstrates higher content consistency, speech quality, and speaker similarity than human utterances, indicating its human-parity synthesis quality.
@@ -661,3 +663,63 @@ Additionally, CosyVoice does not perform well when tasked with singing.
 </td><td>
 
 </td></tr></table>
+
+[^01]: [Tacotron](../../Acoustic/2017.03.29_Tacotron.md)
+[^02]: [Tacotron2](../../Acoustic/2017.10.20_DeepVoice3.md)
+[^03]: [DeepVoice3](../../Acoustic/2017.10.20_DeepVoice3.md)
+[^04]: [ClariNet](../../E2E/2018.07.19_ClariNet.md)
+[^05]: [FastSpeech](../../Acoustic/2019.05.22_FastSpeech.md)
+[^06]: [Transformer-TTS](../../Acoustic/2018.09.19_TransformerTTS.md)
+[^07]: [FastSpeech2](../../Acoustic/2020.06.08_FastSpeech2.md)
+[^08]: [VALL-E](2023.01.05_VALL-E.md)
+[^09]: [SoundStream](../../SpeechCodec/2021.07.07_SoundStream.md)
+[^10]: [EnCodec](../../SpeechCodec/2022.10.24_EnCodec.md)
+[^11]: [FunCodec](../../SpeechCodec/2023.09.14_FunCodec.md)
+[^12]: [SPEAR-TTS](2023.02.07_SPEAR-TTS.md)
+[^13]: [ELLA-V](2024.01.14_ELLA-V.md)
+[^14]: [VALL-T](2024.01.25_VALL-T.md)
+[^15]: [RALL-E](2024.04.04_RALL-E.md)
+[^16]: [VALL-E2](2024.06.08_VALL-E_2.md)
+[^17]: [VALL-E R](2024.06.12_VALL-E_R.md)
+[^18]: [MaskGCT](2024.09.01_MaskGCT.md)
+[^19]: [WaveNeXt](../../Vocoder/2023.12.16_WaveNeXt.md)
+[^20]: [Vocos](../../Vocoder/2023.03.01_Vocos.md)
+[^21]: [MELLE](2024.07.11_MELLE.md)
+[^22]: [DDPM](../../Diffusion/2020.06.19_DDPM.md)
+[^23]: [Song et al. Score-Based Generative Modeling through SDE](../../Diffusion/2020.11.26_Score-Based_Generative_Modeling_through_SDE.md)
+[^24]: [Flow Matching](../../Diffusion/2022.10.06_Flow_Matching.md)
+[^25]: [VoiceBox](2023.06.23_VoiceBox.md)
+[^26]: [NaturalSpeech3](../../Diffusion/2024.03.05_NaturalSpeech3.md)
+[^27]: [VoiceFlow](../../Diffusion/2023.09.10_VoiceFlow.md)
+[^28]: [Matcha-TTS](../../Diffusion/2023.09.06_Matcha-TTS.md)
+[^29]: [E3-TTS](../../Diffusion/2023.11.02_E3_TTS.md)
+[^30]: [DiTTo-TTS](../../Diffusion/2024.06.17_DiTTo-TTS.md)
+[^31]: [E2-TTS](../../Diffusion/2024.06.26_E2_TTS.md)
+[^32]: [F5-TTS](../../Diffusion/2024.10.09_F5-TTS.md)
+[^33]: [Seed-TTS](../2024.06.04_Seed-TTS.md)
+[^34]: [CosyVoice](2024.07.07_CosyVoice.md)
+[^35]: [FireRedTTS](../2024.09.05_FireRedTTS.md)
+[^36]: [GPT-4o](../Interaction/2024.09.06_GPT-4o.md)
+[^37]: [SpeechGPT](../Interaction/2023.05.18_SpeechGPT.md)
+[^38]: [LiveSpeech](../2024.06.05_LiveSpeech.md)
+[^39]: [LiveSpeech2](../2024.10.01_LiveSpeech2.md)
+[^40]: [BASE-TTS](2024.02.12_BASE-TTS.md)
+[^41]: [LLM2Speech](../2023.09.20_LLM2Speech.md)
+[^42]: [FSQ](../../../Modules/VQ/FSQ.md)
+[^43]: [FunAudioLLM](../2024.07.04_FunAudioLLM.md)
+[^44]: [RoPE](../../../Modules/PositionEmb/RoPE.md)
+[^45]: [Qwen2.5](../../TextLM/2024.12.19_Qwen2.5.md)
+[^46]: [CFG](../../Diffusion/2022.07.26_Classifier-Free_Guidance.md)
+[^47]: [iDDPM](../../Diffusion/2021.02.18_iDDPM.md)
+[^49]: [DPO](../../../Modules/RLHF/2023.05.29_DPO.md)
+[^50]: [Paraformer](../../ASR/2022.06.16_Paraformer.md)
+[^51]: [LibriSpeech](../../../Datasets/2015.04.19_LibriSpeech.md)
+[^52]: [ERes2Net](../../_Basis/2023.05.22_ERes2Net.md)
+[^53]: [DNSMOS P.385](../../../Evaluations/2021.10.05_DNSMOS_P.385.md)
+[^54]: [Whisper](../../ASR/2022.12.06_Whisper.md)
+[^55]: [S3prl](../../../Evaluations/2024.04.15_SUPERB.md)
+[^56]: [ChatTTS [URL]](https://github.com/2noise/ChatTTS)
+[^57]: [GPT-SoVITS [URL]](https://github.com/RVC-Boss/GPT-SoVITS)
+[^58]: [OpenVoice](../../E2E/2023.12.03_OpenVoice.md)
+[^59]: [ParlerTTS](../2024.02.02_Parler-TTS.md)
+[^60]: [EmotiVoice [URL]](https://github.com/netease-youdao/EmotiVoice)
