--- a/Models/SpeechLM/ST2S/2024.06.08_VALL-E_2.md
+++ b/Models/SpeechLM/ST2S/2024.06.08_VALL-E_2.md
@@ -920,7 +920,7 @@ We will also put [Microsoft AI Principles](https://www.microsoft.com/ai/responsi
 [^06]: [ELLA-V](2024.01.14_ELLA-V.md)
 [^07]: [RALL-E](2024.04.04_RALL-E.md)
 [^08]: [SoundStorm](2023.05.16_SoundStorm.md)
-[^09]: [Voicebox](2023.06.23_VoiceBox.md)
+[^09]: [Voicebox](../../Diffusion/2023.06.23_Voicebox.md)
 [^10]: [NaturalSpeech3](../../Diffusion/2024.03.05_NaturalSpeech3.md)
 [^11]: [Libriheavy](../../../Datasets/2023.09.15_Libriheavy.md)
 [^12]: [LibriSpeech](../../../Datasets/2015.04.19_LibriSpeech.md)
