--- a/Models/SpeechLM/ST2S/2024.07.07_CosyVoice.md
+++ b/Models/SpeechLM/ST2S/2024.07.07_CosyVoice.md
@@ -82,8 +82,8 @@ However, the impact of these approaches on text-to-speech (TTS) remains unclear.
 Furthermore, leveraging these supervised tokens, we propose CosyVoice, a scalable and efficient zero-shot TTS synthesizer.
 CosyVoice is comprised of an LLM for converting text into semantic token sequences and a conditional flow matching model for the subsequent synthesis of speech from these tokens.
 
-In contrast to prior systems like **TorToise-TTS**[^01], which employs an LLM in conjunction with a **Denoising Diffusion Probabilistic Models (DDPM)**[^10], CosyVoice utilizes a conditional flow matching approach, as it has been demonstrated to accelerate both training and inference compared to traditional diffusion models (**VoiceBox**[^11]).
-While existing methods incorporate flow matching in TTS (**VoiceBox**[^11], **VoiceFlow**[^12], **Matcha-TTS**[^13], **ReFlow-TTS**[^14]), they often rely on phoneme duration prediction, necessitating the use of supplementary phonemizers and forced aligners.
+In contrast to prior systems like **TorToise-TTS**[^01], which employs an LLM in conjunction with a **Denoising Diffusion Probabilistic Models (DDPM)**[^10], CosyVoice utilizes a conditional flow matching approach, as it has been demonstrated to accelerate both training and inference compared to traditional diffusion models (**Voicebox**[^11]).
+While existing methods incorporate flow matching in TTS (**Voicebox**[^11], **VoiceFlow**[^12], **Matcha-TTS**[^13], **ReFlow-TTS**[^14]), they often rely on phoneme duration prediction, necessitating the use of supplementary phonemizers and forced aligners.
 CosyVoice, however, bypasses these dependencies, offering a more direct and efficient pathway from text to speech.
 
 Our research contributes to the field of speech generation in several novel ways:
@@ -260,7 +260,7 @@ t:=1-\cos\left(\frac{1}{2}t\pi\right)
 $$
 Under the scheduled flow, there are more generation steps at the beginning.
 
-Classifier-free guidance (CFG) has been proven to improve the generation quality of diffusion probabilistic models (**CFG**[^16], **iDDPM**[^19], **VoiceBox**[^11]).
+Classifier-free guidance (CFG) has been proven to improve the generation quality of diffusion probabilistic models (**CFG**[^16], **iDDPM**[^19], **Voicebox**[^11]).
 Therefore, we propose to adapt the CFG into conditional flow matching models.
 At the training stage, we randomly drop the conditions $\Psi=\{\mathbf{v}, \{\mu_l\}_{1:L}, \tilde{X_1}\}$ with a fixed probability of $0.2$.
 In this manner, we can learn both conditional and unconditional flows.
@@ -510,7 +510,7 @@ As a result, ***CosyVoice*** achieves the human parity generation quality.
 [^08]: [AudioLM](2022.09.07_AudioLM.md)
 [^09]: [ASQ](../../../Modules/VQ/2023.12.26_ASQ.md)
 [^10]: [DDPM](../../Diffusion/2020.06.19_DDPM.md)
-[^11]: [VoiceBox](2023.06.23_VoiceBox.md)
+[^11]: [Voicebox](../../Diffusion/2023.06.23_Voicebox.md)
 [^12]: [VoiceFlow](../../Diffusion/2023.09.10_VoiceFlow.md)
 [^13]: [Matcha-TTS](../../Diffusion/2023.09.06_Matcha-TTS.md)
 [^14]: [ReFlow-TTS](../../Flow/2023.09.29_ReFlow-TTS.md)
