--- a/Models/SpeechLM/ST2S/2024.12.13_CosyVoice2.md
+++ b/Models/SpeechLM/ST2S/2024.12.13_CosyVoice2.md
@@ -80,7 +80,7 @@ Continuous speech representations are also explored in **MELLE**[^21].
 Language model-based TTS can generate varied and prosody-consistent speech via autoregressive sampling.
 
 Inspired by advances in image generation, denoising diffusion (**DDPM**[^22], **Song et al.**[^23]) and **Flow Matching** models[^24] have been introduced into non-autoregressive (NAR) speech synthesis.
-Early diffusion-based TTS models required duration prediction for each text (phone) to address the length disparity between text and speech features (**VoiceBox**[^25], **NaturalSpeech3**[^26], **VoiceFlow**[^27], **Matcha-TTS**[^28]).
+Early diffusion-based TTS models required duration prediction for each text (phone) to address the length disparity between text and speech features (**Voicebox**[^25], **NaturalSpeech3**[^26], **VoiceFlow**[^27], **Matcha-TTS**[^28]).
 However, this rigid alignment can affect naturalness, resulting in flat prosody.
 To mitigate this issue, cross-attention and Diffusion Transformers (DiT) have been introduced into NAR TTS models (**E3-TTS**[^29], **DiTTo-TTS**[^30]).
 Recent research indicates simpler approaches for text-speech alignment in NAR TTS models, such as **E2 TTS**[^31], **F5-TTS**[^32] and **Seed-TTS**[^33].
@@ -274,7 +274,7 @@ $$
 t:=1-\cos\left(\frac{1}{2}t\pi\right)
 $$
 
-Besides, we also train the model on both conditional and non-conditional situations to enable the classifier-free guidance (CFG) (**CFG**[^46], **iDDPM**[^47], **VoiceBox**[^25]) at the inference stage:
+Besides, we also train the model on both conditional and non-conditional situations to enable the classifier-free guidance (CFG) (**CFG**[^46], **iDDPM**[^47], **Voicebox**[^25]) at the inference stage:
 
 $$
 \begin{aligned}
@@ -688,7 +688,7 @@ Additionally, CosyVoice does not perform well when tasked with singing.
 [^22]: [DDPM](../../Diffusion/2020.06.19_DDPM.md)
 [^23]: [Song et al. Score-Based Generative Modeling through SDE](../../Diffusion/2020.11.26_Score-Based_Generative_Modeling_through_SDE.md)
 [^24]: [Flow Matching](../../Diffusion/2022.10.06_Flow_Matching.md)
-[^25]: [VoiceBox](2023.06.23_VoiceBox.md)
+[^25]: [Voicebox](../../Diffusion/2023.06.23_Voicebox.md)
 [^26]: [NaturalSpeech3](../../Diffusion/2024.03.05_NaturalSpeech3.md)
 [^27]: [VoiceFlow](../../Diffusion/2023.09.10_VoiceFlow.md)
 [^28]: [Matcha-TTS](../../Diffusion/2023.09.06_Matcha-TTS.md)
