--- a/Models/SpeechLM/ST2S/2025.02.16_FELLE.md
+++ b/Models/SpeechLM/ST2S/2025.02.16_FELLE.md
@@ -667,7 +667,7 @@ Experimental results show that our model consistently outperforms several baseli
 [^25]: [**ELLA-V**: Stable Neural Codec Language Modeling with Alignment-Guided Sequence Reordering.](2024.01.14_ELLA-V.md) ArXiv2024.
 [^26]: [**RALL-E**: Robust Codec Language Modeling with Chain-of-Thought Prompting for Text-to-Speech Synthesis.](2024.04.04_RALL-E.md) ArXiv:2404.03204.
 [^27]: [**Cosyvoice**: A Scalable Multilingual Zero-Shot Text-to-Speech Synthesizer Based on Supervised Semantic Tokens.](2024.07.07_CosyVoice.md) ArXiv:2407.05407.
-[^28]: [**VoiceBox**: Text-Guided Multilingual Universal Speech Generation at Scale.](2023.06.23_VoiceBox.md) NeurIPS2024.
+[^28]: [**VoiceBox**: Text-Guided Multilingual Universal Speech Generation at Scale.](../../Diffusion/2023.06.23_Voicebox.md) NeurIPS2024.
 [^29]: [**Matcha-TTS**: A Fast TTS Architecture with Conditional Flow Matching.](../../Diffusion/2023.09.06_Matcha-TTS.md) ICASSP2024.
 [^30]: [**SpeechGPT**: Empowering Large Language Models with Intrinsic Crossmodal Conversational Abilities.](../Interaction/2023.05.18_SpeechGPT.md) EMNLP2023.
 [^31]: [**CFG**: Classifier-Free Diffusion Guidance.](../../Diffusion/2022.07.26_Classifier-Free_Guidance.md) NeurIPS2021.
