--- a/Models/SpeechLM/ST2S/2024.01.14_ELLA-V.md
+++ b/Models/SpeechLM/ST2S/2024.01.14_ELLA-V.md
@@ -46,21 +46,21 @@ Audio samples are available at https://ereboas.github.io/ELLAV/.
 <table><tr><td width="50%">
 
 
-Recently, deep generative AI has achieved remarkable results in various tasks, leading to the emergence of many transformative real-world applications~\citep{gpt3, ramesh2022hierarchical, ddpm, rombach2022high, audiolm, vits, chiang2019cluster}.
+Recently, deep generative AI has achieved remarkable results in various tasks, leading to the emergence of many transformative real-world applications[^01], [^02], [^03], [^04], [^05], [^06], [^07].
 With the advancement of generative models, there have been rapid developments in the field of speech synthesis as well.
 In particular, zero-shot TTS technology has gained increasing attention because it can synthesize high-quality target voices without the need of specified speaker's training data.
-As a state-of-the-art generative model family, diffusion models~\citep{sohl2015deep, ddpm, song2020improved} progressively add noise to the training data and then learn the reverse process to generate samples.
-By leveraging diffusion models and their variants~\citep{sohl2015deep, ddpm, song2020improved, song2021scorebased, flowmatching}, many works have successfully applied them to the audio domain~\citep{gradtts, prodiff, makeanaudio, naturalspeech}.
+As a state-of-the-art generative model family, diffusion models[^08], [^03], [^09] progressively add noise to the training data and then learn the reverse process to generate samples.
+By leveraging diffusion models and their variants[^08], [^03], [^09], [^10], [^11], many works have successfully applied them to the audio domain[^12], [^13], [^14], [^15].
 
-Another major class of generative models is language modeling based on Transformer~\citep{vaswani2017attention}.
-\citet{bert, t5, bart} utilize encoder-only or encoder-decoder architectures to build masked language models so that they selectively focus on relevant segments and effectively model relationships in long sequences.
+Another major class of generative models is language modeling based on Transformer[^16].
+[^17], [^18], [^19] utilize encoder-only or encoder-decoder architectures to build masked language models so that they selectively focus on relevant segments and effectively model relationships in long sequences.
 However, masked language model often requires fine-tuning to adapt to specific tasks, which can be inconvenient for practical usage and deployment.
-On the other hand, AR language models use a decoder-only architecture to predict the next token in a sequence as the training objective, which has demonstrated extremely powerful few-shot and zero-shot capabilities in many generative tasks~\citep{gpt3, lamda, palm}.
-In light of this, VALL-E~\citep{VALLE} and subsequent works~\citep{speartts, audiopalm, wang2023lauragpt} have successfully employed decoder-only language model for zero-shot TTS.
+On the other hand, AR language models use a decoder-only architecture to predict the next token in a sequence as the training objective, which has demonstrated extremely powerful few-shot and zero-shot capabilities in many generative tasks[^01], [^20], [^21].
+In light of this, VALL-E[^22] and subsequent works[^23], [^24], [^25] have successfully employed decoder-only language model for zero-shot TTS.
 
 These approaches first quantize the speech signal into a series of discrete acoustic tokens.
 Subsequently, they employ an AR language model to predict coarse-grained acoustic tokens, eliminating the necessity for explicit duration predictors or speaker encoders.
-Once trained on a large-scale corpus, such as LibriLight~\citep{librilight}, these approaches are capable of synthesizing speech with competitive fidelity and naturalness in a zero-shot manner.
+Once trained on a large-scale corpus, such as LibriLight[^26], these approaches are capable of synthesizing speech with competitive fidelity and naturalness in a zero-shot manner.
 
 
 </td><td>
@@ -69,11 +69,11 @@ Once trained on a large-scale corpus, such as LibriLight~\citep{librilight}, the
 <tr><td>
 
 While VALL-E and its variants have achieved numerous impressive milestones, they still possess certain limitations that impact practical deployment.
-For instance, existing methods~\citep{VALLE,speartts} directly concatenate phoneme tokens and acoustic tokens as a whole sequence to train language models.
+For instance, existing methods[^22], [^23] directly concatenate phoneme tokens and acoustic tokens as a whole sequence to train language models.
 
 In this way, the alignment between audio and phoneme sequences is completely learned through the self-attention in the transformer, making it potentially unstable as self-attention does not explicitly capture the monotonic alignment between audio and phoneme.
 
-Additionally, the decoder-only language model architecture can lead to potential attention degradation issues~\citep{fu2023decoder}, where the alignment quality between the target audio sequence and the source phoneme sequence deteriorates as the generated sequence increases, resulting in inaccurate or low-quality speech outputs.
+Additionally, the decoder-only language model architecture can lead to potential attention degradation issues[^27], where the alignment quality between the target audio sequence and the source phoneme sequence deteriorates as the generated sequence increases, resulting in inaccurate or low-quality speech outputs.
 
 </td><td>
 
@@ -82,14 +82,14 @@ Additionally, the decoder-only language model architecture can lead to potential
 
 Another limitation stems from the nature of AR language modeling.
 Specifically, given a sequence $\mathbf{x}$, the standard AR language model factorizes the likelihood $p(\mathbf{x})$ over the dimensions of $\mathbf{x}$ via the chain rule $p(\mathbf{x})=\prod_{t=0}^{T}p(x_t|\mathbf{x}_{<t})$.
-AR models predict the current tokens solely based on the historical tokens without users' control in the inference process, and sometimes generate semantic repetitions or incoherence in the generated output~\citep{xlnet, gpt3}.
+AR models predict the current tokens solely based on the historical tokens without users' control in the inference process, and sometimes generate semantic repetitions or incoherence in the generated output[^28], [^01].
 In the TTS task, correspondingly, VALL-E cannot directly determine which segment of the output audio corresponds to which prompt phoneme, thus there is no trivial way to promptly detect and prevent issues occurring in the generation process.
 
 These drawbacks can manifest as meaningless phoneme repetitions, transpositions, omissions, or even catastrophic **infinite silence**, i.e., during the process of generation, the model anomalously outputs silence or noise tokens for an extended period of time without stopping.
-Specifically, Table.01 demonstrates the word error rate (WER) and the probability of the **infinite silence** in VALL-E samples at different threshold Top-p for nuclear sampling~\citep{nuclearsampling}.
+Specifically, Table.01 demonstrates the word error rate (WER) and the probability of the **infinite silence** in VALL-E samples at different threshold Top-p for nuclear sampling[^29].
 The detailed experimental setup is described in Section \ref{sec:exp}.
 Notably, a shift in the decoding strategy of VALL-E from fully sampling-based to fully greedy-based leads to a marked decline in sample quality.
-It should be emphasized that while sampling-based stochastic decoding strategies have advantages in terms of synthesis diversity, deterministic decoding strategies (e.g., beam search and its variants) are more suitable for cases where there is less tolerance for synthesis errors and more emphasis on fluency and coherence~\citep{ippolito-etal-2019-comparison}.
+It should be emphasized that while sampling-based stochastic decoding strategies have advantages in terms of synthesis diversity, deterministic decoding strategies (e.g., beam search and its variants) are more suitable for cases where there is less tolerance for synthesis errors and more emphasis on fluency and coherence[^30].
 
 </td><td>
 
@@ -104,7 +104,7 @@ Our core innovation lies in 3 fold:
 - Firstly, ***ELLA-V*** inserts phone tokens into the corresponding positions of the acoustic sequence.
 Unlike existing methods, Connecting phoneme tokens with their corresponding acoustic tokens can help the language model capture the alignment between phoneme and acoustic modalities in local dependencies.
 
-- Secondly, instead of maximizing the expected log-likelihood of the hybrid sequence under a conventional casual mask or a prefix mask like VALL-E and UniLM~\citep{unilm}, ***ELLA-V*** computes loss only on acoustic tokens and special tokens \verb|EndOfPhone(EOP)| and \verb|EndOfSentence(EOS)|.
+- Secondly, instead of maximizing the expected log-likelihood of the hybrid sequence under a conventional casual mask or a prefix mask like VALL-E and UniLM[^31], ***ELLA-V*** computes loss only on acoustic tokens and special tokens \verb|EndOfPhone(EOP)| and \verb|EndOfSentence(EOS)|.
 This training objective not only reduces the redundant computation of cross-modal alignment in the output based on experimental results, but also provides a natural way to have fine-grained control in inference: the model predicts `EOP`, and then the user provides the next phone token.
 Meanwhile, ***ELLA-V***'s GAR model always maintains awareness of the phoneme it is currently synthesizing, allowing it to promptly detect and truncate any abnormal phoneme to avoid any possible **infinite silence** issue.
 
@@ -118,7 +118,7 @@ By advancing these special tokens, the GAR model can better utilize local depend
 </td></tr>
 <tr><td>
 
-Experimental results, using comparable model configurations and 960 hours of speech data from LibriSpeech~\citep{librispeech} as a training set, demonstrate the superiority of ***ELLA-V***.
+Experimental results, using comparable model configurations and 960 hours of speech data from LibriSpeech[^32] as a training set, demonstrate the superiority of ***ELLA-V***.
 Compared to the state-of-the-art zero-shot TTS system VALL-E, ***ELLA-V*** significantly improves the accuracy of synthesized speech, and demonstrates comparable or superior speaker similarity and speech naturalness on a series of subjective and objective experiments.
 ***ELLA-V*** achieves a  WER of 2.28\% on the test-clean set of LibriSpeech.
 Notably, ***ELLA-V*** works well on a wide spectrum of decoding strategies -- even greedy decoding, and still has a substantially better speech accuracy than the best of VALL-E.
@@ -136,14 +136,14 @@ The results indicate that the **global advance** in ***ELLA-V*** significantly i
 **Language Modeling**
 
 Recently, language models have garnered increasing interest in both the academic and industrial communities.
-Compared to models that are confined to specific tasks, language models have been proven to possess the capability to solve a wide array of tasks, shining across various domains such as text~\citep{gpt3,palm,rae2021scaling,yu2022scaling}, images~\citep{alayrac2022flamingo,tsimpoukelli2021multimodal}, and videos~\citep{yang2022zero,wang2022language}.
-In the audio domain, AudioLM~\citep{audiolm} trains language models on discretized audio tokens, achieving speech synthesis tasks through hierarchical prediction of these tokens.
-AudioGen~\citep{audiogen} employs an auto-encoding approach to extract discrete encodings of raw audio, and trains a language model conditioned on textual features for controlled audio generation.
-LM-VC~\citep{lmvc} employs three language models—a masked prefix language model, an external LM, and a prefix LM—to achieve zero-shot voice conversion.
-~\citet{kakouros2023investigating} investigates the role of word surprisal, extracted from language models, in influencing the prosody of speech synthesized by TTS systems.
-For zero-shot TTS, ~\citet{VALLE} approaches TTS as a conditional language modeling task rather than a continuous signal regression.
+Compared to models that are confined to specific tasks, language models have been proven to possess the capability to solve a wide array of tasks, shining across various domains such as text[^01], [^21], [^33], [^34], images[^35], [^36], and videos[^37], [^38].
+In the audio domain, AudioLM[^05] trains language models on discretized audio tokens, achieving speech synthesis tasks through hierarchical prediction of these tokens.
+AudioGen[^39] employs an auto-encoding approach to extract discrete encodings of raw audio, and trains a language model conditioned on textual features for controlled audio generation.
+LM-VC[^40] employs three language models—a masked prefix language model, an external LM, and a prefix LM—to achieve zero-shot voice conversion.
+[^41] investigates the role of word surprisal, extracted from language models, in influencing the prosody of speech synthesized by TTS systems.
+For zero-shot TTS, [^22] approaches TTS as a conditional language modeling task rather than a continuous signal regression.
 By employing discrete audio codes obtained from pre-trained neural codec, it trains a discrete audio language model, achieving improved naturalness in speech and preservation of speaker characteristics.
-VALL-E-X~\citep{VALLEx} extends VALL-E by utilizing source language speech and target language text as prompts when predicting the acoustic marker sequence of the target language speech.
+VALL-E-X[^42] extends VALL-E by utilizing source language speech and target language text as prompts when predicting the acoustic marker sequence of the target language speech.
 This approach supports high-quality zero-shot cross-lingual voice synthesis.
 These methods require only a single utterance of an unknown speaker as a prompt to generate high-quality, specified speech.
 
@@ -156,12 +156,12 @@ These methods require only a single utterance of an unknown speaker as a prompt 
 **Speech Synthesis**
 
 Speech synthesis has long been a significant topic in the fields of artificial intelligence, natural language processing, and speech processing.
-Early methods were based on Statistical Parametric Speech Synthesis (SPSS)~\citep{zen2009statistical}, typically involving complex components such as text analysis models, acoustic models, and vocoders (e.g., hidden Markov model(HMM)~\citep{yoshimura1999simultaneous} based).
+Early methods were based on Statistical Parametric Speech Synthesis (SPSS)[^43], typically involving complex components such as text analysis models, acoustic models, and vocoders (e.g., hidden Markov model(HMM)[^44] based).
 While cost-effective in terms of data, the generated speech of SPSS still exhibited noticeable differences from natural human speech.
-With the advancement of modern neural networks, some work initially replaced HMMs with recurrent neural networks (RNNs) but still followed the SPSS paradigm~\citep{fan2014tts, zen2015unidirectional, valentini2016investigating}.
-Later, end-to-end neural TTS models were introduced, which synthesize Mel spectrograms and employ a vocoder~\citep{wavenet, waveglow} for speech synthesis~\citep{tacotron,deepvoice,fastspeech}.
-Some methods, utilizing techniques such as VAE~\citep{hsu2018hierarchical, lee2022bidirectional}, flow~\citep{flowtts, glowtts}, diffusion~\citep{difftts, guidedtts, gradtts}, and others~\citep{wu2022itowave}, have achieved promising performance in end-to-end speech synthesis.
-On the other hand, models like VALL-E~\citep{VALLE} and AudioLM~\citep{audiolm} utilize autoregressive Transformers to model discrete audio tokens, achieving great in-context learning performance.
+With the advancement of modern neural networks, some work initially replaced HMMs with recurrent neural networks (RNNs) but still followed the SPSS paradigm[^45], [^46], [^47].
+Later, end-to-end neural TTS models were introduced, which synthesize Mel spectrograms and employ a vocoder[^48], [^49] for speech synthesis[^50], [^51], [^52].
+Some methods, utilizing techniques such as VAE[^53], [^54], flow[^55], [^56], diffusion[^57], [^58], [^12], and others[^59], have achieved promising performance in end-to-end speech synthesis.
+On the other hand, models like VALL-E[^22] and AudioLM[^05] utilize autoregressive Transformers to model discrete audio tokens, achieving great in-context learning performance.
 When it comes to zero-shot speech synthesis, autoregressive Transformer-based models can predict and generate audio without the need for an additional duration model, which strikes a favorable balance between efficiency and performance, and has been garnering increasing attention.
 
 </td><td>
@@ -180,14 +180,14 @@ Figure.01 demonstrates the overall architecture of ***ELLA-V***.
 Different from VALL-E, an additional sequence order rearranging step is performed to the text-audio token sequence, after which,  ***ELLA-V*** utilizes a decoder-only language model to learn to perform conditional generation on the hybrid sequences of phoneme and audio tokens.
 Detailed information about the language model will be presented in Section~\ref{sec:training}.
 
-To obtain discrete audio representations, we employ a pre-trained neural audio codec model, EnCodec~\citep{encodec}, following VALL-E~\citep{VALLE}.
+To obtain discrete audio representations, we employ a pre-trained neural audio codec model, EnCodec[^60], following VALL-E[^22].
 EnCodec transforms 24 kHz raw waveforms into 75 Hz discrete tokens using $L$ RVQ layers.
 The discrete acoustic tokens have a hierarchical structure, where the first layer quantizer contains semantic information and coarse-grained acoustic contours, while subsequent $L-1$ quantizers learn fine-grained acoustic details.
 In our experiments, we use the same settings as VALL-E, with $L=8$.
 For each quantizer, we set the codebook size to 1024.
 In this setting, each second of the waveform is represented by $75\times 8$ discrete tokens from RVQ.
 
-To obtain phoneme sequences, we apply the Montreal Forced Aligner (MFA)~\citep{mfa} to the input audio and text transcriptions.
+To obtain phoneme sequences, we apply the Montreal Forced Aligner (MFA)[^61] to the input audio and text transcriptions.
 Notably, MFA not only serves as a text tokenizer but also extracts alignment relationships between phonemes and the corresponding speech.
 The forced alignment information is essential for ***ELLA-V*** to \textbf{change sequence order}.
 In Section~\ref{sec:training}, we will provide a detailed explanation of how this information is used to construct the target sequence.
@@ -234,7 +234,7 @@ $$
 After quantization, we utilize the EnCodec decoder to reconstruct the audio waveform from the discrete acoustic sequence $\mathbf{C}$, formulated as $\hat{\mathbf{x}} \approx \text{DeCodec}(\mathbf{C})$.
 
 For the zero-shot TTS task, the optimization objective is $\max p (\mathbf{C} |\mathbf{P}, \mathbf{\hat{C}})$, where $\mathbf{\hat{C}}$ is the acoustic prompt of the unseen speaker.
-We use language modeling to generate acoustic tokens for the unseen speaker, by learning on the mixed sequence composed of phonemes and codec codes, consistent with previous works~\citep{VALLE,audiopalm}.
+We use language modeling to generate acoustic tokens for the unseen speaker, by learning on the mixed sequence composed of phonemes and codec codes, consistent with previous works[^22], [^24].
 
 Unlike existing approaches, ***ELLA-V*** does not concatenate phoneme tokens and acoustic tokens directly to form the target sequence for training the language model.
 Instead, ***ELLA-V*** \textbf{interleaves phoneme and acoustic tokens} in order to make it easier for language models to learn the alignment between audio and text.
@@ -259,7 +259,7 @@ It is worth noting that the MFA (Montreal Forced Aligner) treats silence as a di
 To clarify, we retain the acoustic component associated with silence but do not sandwich it with an `EOP` and a specific silence phoneme, nor do we use a silence phoneme in the **global advance** part.
 
 We design a GAR language model to learn the continuation task on the aforementioned hybrid sequence, to generate the discrete acoustic code sequence $\mathbf{C}_{:,1}$.
-The GAR model consists of multiple Transformer decoder layers~\citep{transformer}.
+The GAR model consists of multiple Transformer decoder layers[^62].
 After training, it can generate discrete audio codes for a specified text prompt and acoustic prompt.
 GAR is also responsible for predicting `EOP` and `EOS` to indicate the conclusion of a phoneme and the entire sentence, respectively.
 
@@ -339,7 +339,7 @@ Intuitively, both the GAR and NAR model of ***ELLA-V*** compute the loss on the 
 
 ***ELLA-V*** can use a short clip of speech from an unseen speaker as an acoustic prompt to synthesize speech for a specified text prompt.
 Figure.03 illustrates the inference process of the GAR model.
-While VALL-E may get stuck in an infinite loop during inference, resulting in the synthesis of either **infinite silence** or repetitive pronunciation~\citep{VALLE}, ***ELLA-V*** is capable of generating `EOP` and promptly truncating abnormally long phonemes.
+While VALL-E may get stuck in an infinite loop during inference, resulting in the synthesis of either **infinite silence** or repetitive pronunciation[^22], ***ELLA-V*** is capable of generating `EOP` and promptly truncating abnormally long phonemes.
 Following an `EOP`, we can directly append the next phoneme token to the end of the generated sequence, ensuring the proper generation of speech without abnormal pauses or repetitions.
 For the GAR model, we employ a sampling-based decoding strategy, whereas for the NAR model, we use a greedy decoding approach to strike a balance between efficiency and performance.
 
@@ -367,15 +367,15 @@ Specifically, we move the phoneme token and the `EOP` token ahead by a few frame
 
 **Data \& Tasks**
 
-We trained ***ELLA-V*** using the Librispeech~\citep{librispeech} 960h training dataset.
-We utilized Montreal Forced Aligner (MFA)~\citep{mfa} to obtain forced alignment information for the audio-transcription pairs.
+We trained ***ELLA-V*** using the Librispeech[^32] 960h training dataset.
+We utilized Montreal Forced Aligner (MFA)[^61] to obtain forced alignment information for the audio-transcription pairs.
 Sentences with unrecognized or unknown phones by MFA were excluded.
-The open-source 24kHz checkpoint~\footnote{\url{https://github.com/facebookresearch/encodec}} of EnCodec\citep{encodec} was used as the codec to generate discrete acoustic tokens.
+The open-source 24kHz checkpoint~\footnote{\url{https://github.com/facebookresearch/encodec}} of EnCodec[^60] was used as the codec to generate discrete acoustic tokens.
 The LibriSpeech training data was upsampled to 24 kHz before feeding it into EnCodec.
 
 In evaluating the model, two zero-shot TTS tasks were considered.
 
-For the zero-shot TTS continuation task, we adhered to methodologies established by previous works~\citep{VALLE, voicebox, speechx}, selecting examples ranging from 4 seconds to 10 seconds from the LibriSpeech test-clean dataset as our test set.
+For the zero-shot TTS continuation task, we adhered to methodologies established by previous works[^22], [^63], [^64], selecting examples ranging from 4 seconds to 10 seconds from the LibriSpeech test-clean dataset as our test set.
 
 In this task, we used the complete phoneme transcription as the text prompt and the first 3 seconds of the test audio sample as the acoustic prompt.
 The model was required to generate continuations.
@@ -408,8 +408,8 @@ The weight decay was 0.01.
 
 **Baseline**
 
-In our research, we benchmarked the performance of zero-shot speech synthesis against VALL-E \citep{VALLE}.
-This system was originally trained on a substantial 60k hours of audio from the Librilight dataset \citep{librilight}.
+In our research, we benchmarked the performance of zero-shot speech synthesis against VALL-E [^22].
+This system was originally trained on a substantial 60k hours of audio from the Librilight dataset [^26].
 To ensure a rigorous evaluation, we reproduced the VALL-E model and adapted it to train on the LibriSpeech 960h dataset.
 We also adjusted the model dimensions and the number of layers to match the parameter settings of ***ELLA-V*** and VALL-E.
 Both GAR (or AR) and NAR models of VALL-E and ***ELLA-V*** have 154.3M parameters.
@@ -425,8 +425,8 @@ We also include the result for Encodec reconstructed speech for reference, denot
 
 We evaluated our system with several objective metrics.
 Speaker similarity (SPK) and WER served as our primary measures.
-SPK was assessed using the fine-tuned WavLM-TDNN model\footnote{\url{https://huggingface.co/microsoft/wavlm-base-plus-sv}}~\citep{wavlm}, scoring similarity on a scale of -1 to 1, with values above 0.86 indicate the same speaker identity (This value comes from the release model card page).
-The WER was determined by comparing the synthesized speech to the original text using the Conformer-Transducer model\footnote{\url{https://huggingface.co/nvidia/stt_en_conformer_transducer_xlarge}}~\citep{conformer}.
+SPK was assessed using the fine-tuned WavLM-TDNN model\footnote{\url{https://huggingface.co/microsoft/wavlm-base-plus-sv}}[^65], scoring similarity on a scale of -1 to 1, with values above 0.86 indicate the same speaker identity (This value comes from the release model card page).
+The WER was determined by comparing the synthesized speech to the original text using the Conformer-Transducer model\footnote{\url{https://huggingface.co/nvidia/stt_en_conformer_transducer_xlarge}}[^66].
 
 In addition to these standard metrics, we introduced two novel measures: INF\% and CUT\%.
 INF\% quantified the frequency of generating infinitely long audio, indicative of a failure in synthesis.
@@ -531,3 +531,72 @@ We aspire for this work to advance research in enhancing the robustness of speec
 </td><td>
 
 </td></tr></table>
+
+## References: 参考文献
+
+[^01]: gpt3
+[^02]: ramesh2022hierarchical
+[^03]: ddpm
+[^04]: rombach2022high
+[^05]: audiolm
+[^06]: vits
+[^07]: chiang2019cluster
+[^08]: sohl2015deep
+[^09]: song2020improved
+[^10]: song2021scorebased
+[^11]: flowmatching
+[^12]: gradtts
+[^13]: prodiff
+[^14]: makeanaudio
+[^15]: naturalspeech
+[^16]: vaswani2017attention
+[^17]: bert
+[^18]: t5
+[^19]: bart
+[^20]: lamda
+[^21]: palm
+[^22]: VALLE
+[^23]: speartts
+[^24]: audiopalm
+[^25]: wang2023lauragpt
+[^26]: librilight
+[^27]: fu2023decoder
+[^28]: xlnet
+[^29]: nuclearsampling
+[^30]: ippolito-etal-2019-comparison
+[^31]: unilm
+[^32]: librispeech
+[^33]: rae2021scaling
+[^34]: yu2022scaling
+[^35]: alayrac2022flamingo
+[^36]: tsimpoukelli2021multimodal
+[^37]: yang2022zero
+[^38]: wang2022language
+[^39]: audiogen
+[^40]: lmvc
+[^41]: kakouros2023investigating
+[^42]: VALLEx
+[^43]: zen2009statistical
+[^44]: yoshimura1999simultaneous
+[^45]: fan2014tts
+[^46]: zen2015unidirectional
+[^47]: valentini2016investigating
+[^48]: wavenet
+[^49]: waveglow
+[^50]: tacotron
+[^51]: deepvoice
+[^52]: fastspeech
+[^53]: hsu2018hierarchical
+[^54]: lee2022bidirectional
+[^55]: flowtts
+[^56]: glowtts
+[^57]: difftts
+[^58]: guidedtts
+[^59]: wu2022itowave
+[^60]: encodec
+[^61]: mfa
+[^62]: transformer
+[^63]: voicebox
+[^64]: speechx
+[^65]: wavlm
+[^66]: conformer
